Tidied up configure.in to support SDL properly.  Added sounds to Makefile.am Tested.  It built ok for me. Still YMMV however :)

--- a/README
+++ b/README
@@ -1,1 +1,33 @@
+FAQ :
 
+THE COMPILE COMPLAINS CAN'T FIND SDL.
+
+./configure --with-SDL-prefix=<where>
+<where> should be the prefix you make installed SDL into.
+
+FAQ :
+
+HOW DO I GET SOUND ?!
+
+You will need the following wave files in your current directory when you run ASC:
+
+Boom.wav
+Fail.wav
+auto.wav
+bomb.wav
+cannon.wav
+missile.wav
+
+You will then need the following symlinks.
+
+weapon00.wav -> missile.wav
+weapon02.wav -> bomb.wav
+weapon03.wav -> missile.wav
+weapon04.wav -> missile.wav
+weapon06.wav -> auto.wav
+weapon07.wav -> cannon.wav
+
+I have a bunch of sounds I got from free sound sites on the web which I can make available.
+I'm still looking for a good (submarine type) torpedo sound.
+
+NB: You don't *need* the symlinks pers'e, but they document what each weapon number means.
