Fixed bugs:    invalid mouse buttons reported when moving the mouse    missing service weapon in weapon information    invalid text displayed in ammo production    undamaged units selected in repair vehicle function
 speed up when playing weapon sound

--- a/TODO
+++ b/TODO
@@ -7,3 +7,8 @@
   6) pause *briefly*
 - Add motor sounds during movement
 - Tidy up code so that doxygen produces good output.
+
+basestrm.cpp
+   implement getfiletime()
+             tn_file_buf_stream::gettime()
+
