--- a/source/TODO
+++ b/source/TODO
@@ -2,10 +2,14 @@ TODO list for the Linux port:
   (code fixes only right now - no graphics port work in this file yet.  Is
    anyone working on that yet?)
 
-1.  Fix comparisons between char and unsigned char that gcc warns about.
-2.  Fix non virtual destructors for classes
-3.  Fix delete[] void warnings
-4.  Reformat the code to something a little more readable (use indent maybe?)
-5.  Run this through 'gcc -W -Wall' and fix other problems
+1.  Get Truecolor graphics to work (title screen for example)
+2.  Get JPEG images to work. A modified version of the independant JPEG groups
+    library is included, but not used by the Linux version yet.
+    
+11.  Fix comparisons between char and unsigned char that gcc warns about.
+12.  Fix non virtual destructors for classes
+13.  Fix delete[] void warnings
+14.  Reformat the code to something a little more readable (use indent maybe?)
+15.  Run this through 'gcc -W -Wall' and fix other problems
 
 *******
