--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,24 @@
+This file is a generic description how to compile Advanced Strategic Command. 
+
+For information about running the Linux version of ASC refer to 
+'doc/readme.linux'.
+
+Information about playing ASC (for example: 'how do mines work?') can be found
+in 'doc/asc.html'. That file is totally platform independant.
+
+If you want to improve ASC I recommend to read the file 'doc/source.htm'
+
+------------------------------------------------------------------------------
+
+FAQ :
+
+THE COMPILE COMPLAINS IT CAN'T FIND SDL.
+
+./configure --with-SDL-prefix=<where>
+<where> should be the prefix you make installed SDL into.
+
+------------------------------------------------------------------------------
+
 
 Basic Installation
 ==================
