--- a/source/TODO
+++ b/source/TODO
@@ -22,6 +22,13 @@ code could perhaps look like this:
         int someinteger = cf.getInt ("Mouse", "scrollbutton", 2 );   
     -Use plain C / C++ file IO, no ASC specific streams, because they need
         exactly this configuration data to be initialized
+    -the code could be placed in basestrm.cpp or sgstream.cpp .
+     The code for reading / writing the current binary configuration file are
+      the procedures readgameoptions / writegameoptions and are located in 
+      sgstream.cpp
+
+
+
 
 1.  Get Truecolor graphics to work (title screen for example)
 2.  Get JPEG images to work. A modified version of the independant JPEG groups
