--- a/source/TODO
+++ b/source/TODO
@@ -2,10 +2,11 @@ TODO list for ASC:
 
 1.  Caching of fullscreen image ( file sdl/loadimage.c )
     converting an image from 24 bitt to 8 bit and resizing it is quite slow.
-    The image could be saved as PCX with 8 bit and correct resolution to be 
+    The image could be cached as PCX with 8 bit and correct resolution to be
     loaded faster the next time.
 3.  Clean up the transportcargo routines in mapeditor ( cancel function etc )
-    
+5.  Optimize  int VehicleMovement :: getDistance ( int x, int y ) in unitctrl.cpp
+
 11.  Fix comparisons between char and unsigned char that gcc warns about.
 13.  Fix delete[] void warnings 
      -> making a class for image data
