AutoRepairRate added version will be updated to actual version when saved "vehicle must category" added Weapon pannel restructured + can.NOT.hit added data-arrays updated

--- a/source/tools/java/ToDO.txt
+++ b/source/tools/java/ToDO.txt
@@ -1,3 +1,20 @@
+Not working components:
+----------------------------------
+
 Weapons Add/Remove - Button
 
 Revert to Saved - Button
+
+
+Missing functions :
+---------------------
+
+Gebäude/Einheiten bauen
+
+Object bauen (-id = entfernen)
+
+TerrainAccess
+
+Bugs :
+-------
+
