--- a/source/TODO
+++ b/source/TODO
@@ -28,6 +28,8 @@ Small tasks:
 
 -   direct invocation of and from mail clients to automate email games
 
+-   replacing those ugly dynamic_array templates by std::vector
+
 -   Optimize  int VehicleMovement::getDistance ( int x, int y) in unitctrl.cpp
     This function is pretty slow, but not called often enough to really 
     beeing a problem
@@ -59,6 +61,10 @@ Medium sized tasks
      NEWKEYB will reveal all cruicial parts of the code which may be greatly
      simplified with a new key class that routines like rkey should return.
 
+=   new string handling
+     replacing all occurances of c-style strings (char*) and c++ strings
+     (std::string) by the new ASCString class (which is derived from
+     std::string)
 
 Larger Tasks:
 
