Updated Borland C++ Building project files  Fixed some compilation problems with Borland  Made weaponguide compilable again

--- a/source/TODO
+++ b/source/TODO
@@ -2,6 +2,9 @@ TODO list for ASC, programming department:
 
 Small tasks:
 
+-   write a platform independant wrapper around vsnprintf (used in 
+    ASCString.cpp)
+
 -   rewriting tdrawgettempline ( mapalgorithm.cpp ) which is way to slow
    
 -   Clean up the transportcargo routines in mapeditor ( cancel function etc )
