--- a/source/TODO
+++ b/source/TODO
@@ -6,11 +6,6 @@ TODO list for ASC, programming department.
 
 Bugs:
 
->- Eine Einheit, die nur auf einer bestimmten H”henstufe schieáen kann,
->kann trotzdem auf einer anderen H”henstufe reactionfire aktivieren.
->Bsp.: IOX aus SY-Units. Das drfte aus meiner Sicht nicht m”glich sein,
->oder ist es gewollt?
-
 
 
 Small tasks:
@@ -64,6 +59,7 @@ Small tasks:
 
 -8-  kamikaze weapon
 
+-4- add mine information to field info dialog
 
 Medium sized tasks
 
