Updated documentation  Updated configure.in

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Martin Bickel <bickel@asc-hq.org>
+You can view the list of people who contributed to ASC in the game itself through the
+HELP / ABOUT menu item.
+The text itself is stored somewhere in data/helpsyst.txt
