--- a/source/TODO
+++ b/source/TODO
@@ -13,6 +13,8 @@ Bugs:
  
 Small tasks:
 
+-2- update doc for message event
+
 -5- Display number of mines on a field
 
 -5- Message of crashed airplanes when they run out of fuel
